--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-octocrab = "0.31.2"
+clap = { version = "4.4.8", features = ["derive"] }
+octocrab = "0.32.0"
+petgraph = "0.6.4"
+tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
